--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,35 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+* install ruby 2.2.3
+* install postgres
+* gem install bundler
 
-Things you may want to cover:
+* cd beer-graph
+* bundle
 
-* Ruby version
+* edit config/database.yml for your postgres installation
 
-* System dependencies
+* rake db:create
+* rake db:migrate
+* rake db:seed
 
-* Configuration
+* rails s
 
-* Database creation
+* open a browser and navigate to http://localhost:3000
 
-* Database initialization
+* You will see GraphiQL - a react component for GraphQL
 
-* How to run the test suite
+* try the following query 
 
-* Services (job queues, cache servers, search engines, etc.)
+{ 
+  beers{
+    name
+    description
+    style {
+      name
+    }
+  }
+}
 
-* Deployment instructions
 
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
